change dtos and entities
